[package]
name = "yy1"
description = "Tiny utility to convert KiCad centroid files into Neoden YY1 pick and place machine format"
authors = ["Vitaly Domnikov <oss@vitaly.codes>"]
license = "MIT/Apache-2.0"
readme = "readme.md"
repository = "https://github.com/dotcypress/yy1"
version = "0.0.6"
edition = "2021"

[dependencies]
clap = "4.5.30"
csv = "1.3.1"
regex = "1.11.1"
serde = { version = "1.0.217", features = ["derive"] }
